time in main